File: plugins/nexus-coreui-plugin/src/main/java/org/sonatype/nexus/coreui/internal/users/UsersStateContributor.java